--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -131,7 +131,7 @@
 
   <table id="tasks" class="board" cellspacing="0">
     <%- @sprint.stories.each do |story| %>
-    <tr>
+    <tr class="<%= mark_if_closed(story) %>">
       <td>
         <div class="story <%= mark_if_closed(story) %>" <%= build_inline_style(story) %>>
           <div class="id story_tooltip">
