--- a/app/views/rb_tasks/_task.html.erb
+++ b/app/views/rb_tasks/_task.html.erb
@@ -1,6 +1,7 @@
 <div class="model issue task <%= mark_if_closed(task) %>" id="issue_<%= task.id %>" <%= build_inline_style(task) %>>
   <div class="id story_tooltip">
     <div class="tooltip_text"><%= render :partial => "rb_stories/tooltip", :object => task %></div>
+    <div class="t" style="float:left"><%= avatar task.assigned_to, :size => "17" %></div>
     <div class="t"><%= issue_link_or_empty(task) %></div>
     <div class="v"><%= id_or_empty(task) %></div>
   </div>
