--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -152,6 +152,7 @@
             </div>
           <%- end %>
           <div class="story_points editable" fieldname="story_points" fieldlabel="<%=l(:field_story_points)%>"><%= story.story_points %></div>
+          <div class="status"><%= story.status %></div>
         </div>
       </td>
       <%- @statuses.each do |status| %>
