--- a/assets/stylesheets/taskboard.css
+++ b/assets/stylesheets/taskboard.css
@@ -258,7 +258,23 @@ td.closed{
   border-radius:15px 15px 15px 15px;
   border:2px solid #FFFFFF;
   background-color:#0000ee;
-  bottom:10px;
+  bottom:30px;
+  color:#FFFFFF;
+  font-size:9px;
+  height:13px;
+  padding-left:5px;
+  padding-right:5px;
+  position:absolute;
+  right:-5px;
+}
+
+.issue .category_id.editable{
+  -moz-border-radius:15px 15px 15px 15px;
+  -webkit-border-radius:15px 15px 15px 15px;
+  border-radius:15px 15px 15px 15px;
+  border:2px solid #FFFFFF;
+  background-color:#0000ee;
+  bottom:25px;
   color:#FFFFFF;
   font-size:9px;
   height:13px;
@@ -272,6 +288,10 @@ td.closed{
   display:none;
 }
 
+.issue .category_id .v{
+  display:none;
+}
+
 .issue .remaining_hours.editable{
   -moz-border-radius:15px 15px 15px 15px;
   -webkit-border-radius:15px 15px 15px 15px;
@@ -279,6 +299,22 @@ td.closed{
   border:2px solid #FFFFFF;
   background-color:#EE0000;
   bottom:-5px;
+  color:#FFFFFF;
+  font-size:9px;
+  height:13px;
+  padding-left:5px;
+  padding-right:5px;
+  position:absolute;
+  right:-5px;
+}
+
+.issue .estimated_hours.editable{
+  -moz-border-radius:15px 15px 15px 15px;
+  -webkit-border-radius:15px 15px 15px 15px;
+  border-radius:15px 15px 15px 15px;
+  border:2px solid #FFFFFF;
+  background-color:#6600FF;
+  bottom:10px;
   color:#FFFFFF;
   font-size:9px;
   height:13px;
