--- a/assets/stylesheets/master_backlog.css
+++ b/assets/stylesheets/master_backlog.css
@@ -81,7 +81,7 @@
 
 #product_backlog_container .closedbacklog,
 #product_backlog_container .backlog{ /* Overrides style above */
-  position:absolute;
+  position:relative;
   top:0;
 }
 
@@ -290,23 +290,23 @@
 #backlogs_container .closedbacklog .stories,
 #backlogs_container .backlog .stories{
   list-style:none;
-/*  min-height:26px;*/
+  min-height:26px;
   margin:0;
   padding:0;
   position:relative;
-/*  z-index:500;*/
+  /* z-index:500; */
 }
 
 
 #backlogs_container .stories .story{
   background-color:#FFFFF6;
   cursor:move;
-/*  display:block;*/
+  display:block;
   font-size:11px;
-/*  height:26px;*/
+  height:26px;
   margin:0;
-/*  overflow:hidden;*/
-/*  position:relative;*/
+  overflow:hidden;
+  position:relative;
   width:100%;
   border-bottom: #AAAAAA 1px solid;
 }
