--- a/app/views/rb_master_backlogs/show.html.erb
+++ b/app/views/rb_master_backlogs/show.html.erb
@@ -63,6 +63,10 @@
     <div id="top_sprint_backlogs_container">
       <div id="sprint_backlogs_container">
         <%= render :partial => 'backlog', :collection => @sprint_backlogs %>
+<% if @project.module_enabled? 'news' %>
+<iframe src="/rb/news/<%= @project.identifier %>" name="sample" width="580" height="200" style="border: 0;">
+</iframe>
+<% end %>
 <% if @project.module_enabled? 'wiki' %>
 <iframe src="/rb/wiki/<%= @project.identifier %>" name="sample" width="580" height="600" style="border: 0;">
 </iframe> 
